--- a/No3.admin-order/source/product.html
+++ b/No3.admin-order/source/product.html
@@ -12,12 +12,10 @@ current: product
       <i class="far fa-square"></i>
       <i class="fas fa-sort-down align-text-top"></i>
       <div class="select-menu">
-        <div>Selest All</div>
+        <div>Select All</div>
         <div>Unselect All</div>
-        <div>Paid</div>
-        <div>Unpaid</div>
-        <div>Shipping</div>
-        <div>Done</div>
+        <div>Publish</div>
+        <div>Unpublish</div>
       </div>
     </div>
     <button id="addBtn" class="btn btn-dark" data-toggle="modal" data-target="#addProductModal">
@@ -44,7 +42,7 @@ current: product
           <th class="text-right">Discount</th>
           <th>Size</th>
           <th>Color</th>
-          <th>Inventory</th>
+          <th>Stock</th>
           <th>Status</th>
         </tr>
       </thead>
@@ -182,7 +180,7 @@ current: product
                   <div class="input-group-prepend">
                     <span class="input-group-text">Original</span>
                   </div>
-                  <input type="number" class="form-control">
+                  <input id="Original" type="number" class="form-control">
                 </div>
               </div>
               <div class="col-md">
@@ -190,19 +188,22 @@ current: product
                   <div class="input-group-prepend">
                     <span class="input-group-text">Discount</span>
                   </div>
-                  <input type="number" class="form-control">
+                  <input id="Discount" type="number" class="form-control">
                 </div>
               </div>
             </div>
-            <div class="form-row" 規格>
-
+            
+            <div class="form-row">
               <div class="col-md-12">Spectification</div>
-              <div class="col-md">
+            </div>
+            <div class="form-row specWrap" 規格>
+
+              <div class="col-md-4">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <label class="input-group-text" for="Size">Size</label>
                   </div>
-                  <select class="custom-select" id="Size">
+                  <select class="custom-select Size" id="Size">
                     <option selected>Choose...</option>
                     <option value="L">L</option>
                     <option value="M">M</option>
@@ -210,24 +211,24 @@ current: product
                   </select>
                 </div>
               </div>
-              <div class="col-md">
+              <div class="col-md-4">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">Color</span>
                   </div>
-                  <input type="text" class="form-control">
+                  <input id="Color" type="text" class="form-control Color">
                 </div>
               </div>
-              <div class="col-md">
+              <div class="col-md-4">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">Stock</span>
                   </div>
-                  <input type="number" class="form-control">
+                  <input id="Stock" type="number" class="form-control Stock">
                 </div>
               </div>
             </div>
-            <button class="btn btn-dark w-100">
+            <button class="btn btn-dark w-100 addSpecBtn">
               ADD NEW SPECIFICATION
               <i class="fas fa-plus"></i>
             </button>
@@ -235,8 +236,8 @@ current: product
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-dark" data-dismiss="modal">SAVA DRAFT</button>
-          <button type="button" class="btn btn-dark">Publish</button>
+          <button id="draftBtn" type="button" class="btn btn-outline-dark" data-dismiss="modal">SAVA DRAFT</button>
+          <button id="publishBtn" type="button" class="btn btn-dark">Publish</button>
         </div>
 
       </div>
@@ -246,7 +247,361 @@ current: product
 </div>
 
 <script>
-  $('#addBtn').on('shown.bs.modal', function () {
-    $('#addProductModal').trigger('focus')
+  // table 篩選
+  let datas = [
+    {
+      Product: {
+        img: "https://images.unsplash.com/photo-1521043330514-61d46d71684c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80",
+        name: 'T-shirt'
+      },
+      Price: {
+        Original: 3200,
+        Discount: 2800,
+      },
+      Spectification: [
+        {
+          Size: 'L',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'L',
+          Color: 'Black',
+          Stock: 20
+        },
+        {
+          Size: 'M',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'M',
+          Color: 'Black',
+          Stock: 5
+        }
+      ],
+      Status: 'Publish',
+      checked: false
+    },
+    {
+      Product: {
+        img: "https://images.unsplash.com/photo-1521043330514-61d46d71684c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80",
+        name: 'T-shirt2'
+      },
+      Price: {
+        Original: 3200,
+        Discount: 2800,
+      },
+      Spectification: [
+        {
+          Size: 'L',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'L',
+          Color: 'Black',
+          Stock: 11
+        },
+        {
+          Size: 'M',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'M',
+          Color: 'Black',
+          Stock: 5
+        }
+      ],
+      Status: 'Unpublish',
+      checked: true
+    },
+    {
+      Product: {
+        img: "https://images.unsplash.com/photo-1521043330514-61d46d71684c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80",
+        name: 'T-shirt3'
+      },
+      Price: {
+        Original: 3200,
+        Discount: 2800,
+      },
+      Spectification: [
+        {
+          Size: 'L',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'L',
+          Color: 'Black',
+          Stock: 11
+        },
+        {
+          Size: 'M',
+          Color: 'Gray',
+          Stock: 5
+        },
+        {
+          Size: 'M',
+          Color: 'Black',
+          Stock: 5
+        }
+      ],
+      Status: 'Unpublish',
+      checked: true
+    },
+  ]
+  let btnColor = {
+    Publish: 'btn-green',
+    Unpublish: 'btn-secondary',
+    Delete: 'btn-danger'
+  }
+
+  function render(datas) {
+
+    let totalStr = ''
+
+    datas.forEach((data, i, datas) => {
+
+      // Spectification
+      let tdSpecification = ''
+      let tempCount = {}
+
+      data.Spectification.forEach((product, j, data) => {
+
+        let temp = `
+          <div class="d-flex ">
+            <div style="width: 28%;">
+              ${tempCount[product.Size] ? "" : product.Size}
+            </div>
+            <div style="width: 50%">${product.Color}</div>
+            <div>${product.Stock}</div>
+          </div>
+        `
+
+        // 隱藏第二個之後的 Size 
+        if (tempCount[product.Size] == undefined) {
+          tempCount[product.Size] = 1
+        } else {
+          tempCount[product.Size] += 1
+        }
+
+        tdSpecification += temp
+      })
+
+      // table row
+      let trStr = function () {
+        return `
+        <tr>
+          <td product>
+            <label for="">
+              <i class="far fa-${data.checked ? 'check-' : ''}square checked"></i>
+            </label>
+            <img class="align-middle"
+              src=${data.Product.img} width="80">
+            ${data.Product.name}
+          </td>
+          <td original class="text-right">${data.Price.Original}</td>
+          <td disconnt class="text-right">${data.Price.Discount}</td>
+          <td colspan="3">
+            ${tdSpecification}
+          </td>
+          <td status>
+            <div class="select">
+              <button class="btn ${btnColor[data.Status]}">
+                ${data.Status}
+                <i class="fas fa-sort-down align-text-top"></i>
+              </button>
+              <div class="select-menu">
+                <div>Publish</div>
+                <div>Unpublish</div>
+                <div class="bg-danger">Delete</div>
+              </div>
+            </div>
+          </td>
+        </tr>                
+        `
+      }()
+
+      totalStr += trStr
+    })
+
+    document.querySelector('tbody').innerHTML = totalStr
+  }
+
+  // 初始化
+  render(datas)
+
+  // 勾選判斷
+  document.querySelector('table').addEventListener('click', (e) => {
+    var el = e.target
+    var tr = el.parentElement.parentElement.parentElement
+
+    // 是否點擊到勾選框
+    if (el.className.split(" ")[2] == 'checked') {
+      var index = [].indexOf.call(tr.parentElement.children, tr)
+      datas[index].checked = !datas[index].checked
+    }
+
+    render(datas)
   })
+
+  // 勾選篩選
+  document.querySelector('.select-menu').addEventListener('click', (e) => {
+
+    let text = e.target.textContent
+    let filterData = datas
+
+    if (text == 'Select All') datas.forEach(data => data.checked = true)
+    if (text == 'Unselect All') datas.forEach(data => data.checked = false)
+
+    if (text == 'Publish') filterData = datas.filter(data => data.Status == "Publish")
+    if (text == 'Unpublish') filterData = datas.filter(data => data.Status == "Unpublish")
+
+    render(filterData)
+  })
+
+  // 修改狀態
+  document.querySelector('tbody').addEventListener('click', (e) => {
+    let statusDiv = e.target
+    let tbody = document.querySelector('tbody')
+
+    if (e.target.textContent == 'Publish' ||
+      e.target.textContent == 'Unpublish') {
+
+      let tr = e.target.parentElement.parentElement.parentElement.parentElement
+
+      var index = [].indexOf.call(tbody.children, tr)
+      datas[index].Status = e.target.textContent
+
+      render(datas)
+    }
+
+    // 刪除產品
+    if (e.target.textContent == 'Delete') {
+      let tr = e.target.parentElement.parentElement.parentElement.parentElement
+
+      var index = [].indexOf.call(tbody.children, tr)
+      datas.splice(index, 1)
+
+      render(datas)
+    }
+
+  })
+
+
+  // Modal
+  // $('#addBtn').on('shown.bs.modal', function () {
+  //   $('#addProductModal').trigger('focus')
+  // })
+  document.querySelector('#addBtn')
+  .addEventListener('shown.bs.modal', function () {
+    document.querySelector('#addProductModal').focus()
+  })
+
+  // 新增規格
+  const addSpecBtn = document.querySelector('.addSpecBtn')
+  const specWrap = document.querySelector('.specWrap')
+
+  let sizeTemp = `
+  <div class="col-md-4">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="Size">Size</label>
+      </div>
+      <select class="custom-select Size" id="Size">
+        <option selected>Choose...</option>
+        <option value="L">L</option>
+        <option value="M">M</option>
+        <option value="S">S</option>
+      </select>
+    </div>
+  </div>
+  `
+
+  let colorTemp = `
+  <div class="col-md-4">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Color</span>
+      </div>
+      <input id="Color" type="text" class="form-control Color">
+    </div>
+  </div>
+  `
+
+  let stockTemp = `
+  <div class="col-md-4">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Stock</span>
+      </div>
+      <input id="Stock" type="number" class="form-control Stock">
+    </div>
+  </div>
+  `
+
+  addSpecBtn.addEventListener('click', (e)=>{
+    specWrap.innerHTML += (sizeTemp+colorTemp+stockTemp)
+  })
+
+
+
+
+
+
+  // 新增商品
+  const publishBtn = document.querySelector('#publishBtn')
+  const draftBtn = document.querySelector('#draftBtn')
+
+  publishBtn.addEventListener('click', ()=>addProduct('Publish') )
+  draftBtn.addEventListener('click', ()=>addProduct('Unpublish') )
+
+
+  function addProduct(status) {
+    let Title = document.querySelector('#Title').value
+    let Original = document.querySelector('#Original').value
+    let Discount = document.querySelector('#Discount').value
+
+    let SizeList = document.querySelectorAll('.Size')
+    let ColorList = document.querySelectorAll('.Color')
+    let StockList = document.querySelectorAll('.Stock')
+
+    let Spectification = []
+
+    SizeList.forEach((item, index, arr)=>{
+      Spectification[index] =  {
+        Size: SizeList[index].value,
+        Color: ColorList[index].value,
+        Stock: StockList[index].value
+      }
+    })
+
+    datas = [...datas, {
+      Product: {
+        img: "https://images.unsplash.com/photo-1521043330514-61d46d71684c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80",
+        name: Title
+      },
+      Price: {
+        Original: Original,
+        Discount: Discount,
+      },
+      Spectification: Spectification,
+      Status: status,
+      checked: false
+    }]
+
+    render(datas)
+
+    // 隱藏 & 消除資料
+    $('#addProductModal').modal('hide')  // 隱藏 modal
+    document.querySelector('#Title').value = ''
+    document.querySelector('#Original').value = ''
+    document.querySelector('#Discount').value = ''
+
+    specWrap.innerHTML = (sizeTemp+colorTemp+stockTemp)
+
+  }
+
 </script>
